<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Agora ARCore</string>

    <string name="private_broadcasting_app_id">

01322f77a71d44fabb0e422d09f59335</string>
    <string name="ar_mode">AR mode</string>
    <string name="agora_mode">Agora mode</string>
    <string name="show_point">Show point cloud</string>
    <string name="hide_point">Hide point cloud</string>
    <string name="show_plane">Show plane</string>
    <string name="hide_plane">Hide plane</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="clear_drawing">Clear drawing</string>
    <string name="select_color">Select color</string>
    <string name="undo_last_drawing_element">Undo last drawing element</string>
    <string name="white_color">White color</string>
    <string name="red_color">Red color</string>
    <string name="green_color">Green color</string>
    <string name="blue_color">Blue color</string>
    <string name="black_color">Black color</string>
    <string name="rainbow_color">Rainbow color</string>
</resources>
